title display issue fixed on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -635,7 +635,7 @@ address {
 }
 h2 {
   text-transform: uppercase;
-  margin: 0 0 0 40px;
+  margin: 0 20px 0 40px;
   padding: 0 0 0 0;
   font-size: 1.25em;
   line-height: 1.16em;
